[project]
name = "testing-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MoweryOSU", email = "MoweryOSU@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
testing-demo = "testing_demo:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
